Academic personal website

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
   <div class="header-inner">
-    <img src="{{ "/assets/profile.jpeg" | relative_url }}"
+    <img src="{{ "/assets/header.jpeg" | relative_url }}"
          alt="Qibin Shi"
          class="profile-img">
 
