--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ body {
 /* Hero section */
 .hero {
   position: relative;
-  background-image: url("../background.jpg");
+  background-image: url("../background.jpeg");
   background-size: cover;
   background-position: center;
   color: #ffffff;
