--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,6 +21,7 @@
       <a href="mailto:{{ site.email }}">Email</a>
       <a href="https://scholar.google.com/citations?hl=en&user=CbR34PsAAAAJ&view_op=list_works&sortby=pubdate" target="_blank">Google Scholar</a>
       <a href="/assets/QibinShiCV2025.pdf">CV</a>
+      <a href="https://qibinshi-rt9jzdtp.manus.space" target="_blank">Research</a>
     </nav>
   </div>
 </header>
